--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <title>Rashmi | Digital Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* General Page Style */
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #e6e6fa 30%, #c0d6f5 100%);
+      background: linear-gradient(135deg, #e6e6fa 30%, #c0f0e0 100%);
       color: #333;
       min-height: 100vh;
     }
 
-    /* Navbar */
+    /* ===== NAVBAR ===== */
     .navbar {
       background-color: rgba(230, 230, 250, 0.95);
       display: flex;
@@ -49,7 +48,7 @@
       text-shadow: 0 0 5px #3b76d1;
     }
 
-    /* Intro Section */
+    /* ===== INTRO SECTION ===== */
     .intro {
       display: flex;
       justify-content: center;
@@ -58,7 +57,7 @@
     }
 
     .intro-container {
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.9);
       padding: 60px 50px;
       border-radius: 25px;
       box-shadow: 0 8px 30px rgba(91, 75, 138, 0.15);
@@ -90,7 +89,7 @@
       font-size: 16px;
     }
 
-    /* Button */
+    /* ===== BUTTON STYLE ===== */
     .btn {
       display: inline-block;
       margin-top: 25px;
@@ -111,7 +110,6 @@
       box-shadow: 0 8px 25px rgba(91, 75, 138, 0.5);
     }
 
-    /* Footer */
     footer {
       text-align: center;
       margin-top: 60px;
@@ -130,6 +128,7 @@
       <a href="index.html" class="active">Home</a>
       <a href="resume.html">Resume</a>
       <a href="biodata.html">Bio-data</a>
+      <a href="projects.html">💻 Projects</a>
     </nav>
   </header>
 
@@ -152,7 +151,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Rashmi | Designed with 💜 & calm energy</p>
+    <p>© 2025 Rashmi C</p>
   </footer>
 </body>
 </html>
