--- a/biodata.html
+++ b/biodata.html
@@ -5,67 +5,146 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bio-data - RASHMI C</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+
   <style>
+    /* ===== General Page Styling ===== */
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #e6e6fa 30%, #c0d6f5 100%);
+      background: linear-gradient(135deg, #e6e6fa 20%, #c0f0e0 100%);
       color: #333;
-      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 100vh;
     }
 
+    /* ===== Main Container ===== */
     .bio-container {
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.97);
       padding: 40px 50px;
-      border-radius: 20px;
-      box-shadow: 0 8px 30px rgba(91, 75, 138, 0.15);
-      max-width: 500px;
+      border-radius: 18px;
+      box-shadow: 0 10px 40px rgba(64, 61, 80, 0.2);
+      max-width: 750px;
       width: 90%;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+      transition: 0.3s ease;
     }
 
     .bio-container:hover {
-      transform: scale(1.03);
-      box-shadow: 0 12px 40px rgba(91, 75, 138, 0.25);
+      transform: scale(1.01);
+      box-shadow: 0 12px 45px rgba(64, 61, 80, 0.25);
     }
 
-    .bio-container h2 {
-      color: #5b4b8a;
+    /* ===== Photo Styling ===== */
+    .bio-photo {
+      position: absolute;
+      top: 40px;
+      right: 50px;
+      width: 110px;
+      height: 130px;
+      border-radius: 10px;
+      object-fit: cover;
+      border: 2px solid #b7a5da;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    h2 {
+      text-align: center;
+      color: #4b3b8f;
       font-size: 28px;
       margin-bottom: 25px;
     }
 
+    /* ===== Info Items ===== */
     .bio-item {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      padding: 12px 15px;
-      margin: 10px 0;
-      background: #f5f5ff;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(91, 75, 138, 0.1);
-      font-size: 16px;
+      padding: 8px 12px;
+      margin: 6px 0;
+      border-bottom: 1px solid #eee;
+      font-size: 15px;
+    }
+
+    .bio-item strong {
+      color: #3f3b6c;
     }
 
     .bio-item span {
       font-weight: 600;
-      color: #3b76d1;
+      color: #2874a6;
     }
 
-    .bio-icon {
-      margin-right: 10px;
-      color: #5b4b8a;
+    h3 {
+      margin-top: 25px;
+      color: #4b3b8f;
+      border-left: 5px solid #88b6b2;
+      padding-left: 10px;
     }
 
-    @media (max-width: 500px) {
+    /* ===== Education Table ===== */
+    .edu-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 12px;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .edu-table th, .edu-table td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+    }
+
+    .edu-table th {
+      background: #7d9bba;
+      color: #fff;
+    }
+
+    .edu-table td {
+      background: #f9f9ff;
+      color: #333;
+    }
+
+    /* ===== Achievements ===== */
+    ul.achievement-list {
+      text-align: left;
+      margin: 10px 0;
+      padding-left: 25px;
+      list-style-type: "✨ ";
+      color: #333;
+    }
+
+    /* ===== Back Button ===== */
+    .back-btn {
+      display: inline-block;
+      margin-top: 20px;
+      background: linear-gradient(to right, #88b6b2, #b9a2e6);
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+      box-shadow: 0 4px 10px rgba(91, 75, 138, 0.3);
+      transition: 0.3s;
+    }
+
+    .back-btn:hover {
+      background: linear-gradient(to right, #74a39c, #a083d8);
+      transform: translateY(-2px);
+    }
+
+    @media (max-width: 600px) {
       .bio-container {
-        padding: 30px 20px;
+        padding: 30px 25px;
+      }
+
+      .bio-photo {
+        position: static;
+        margin: 10px auto 15px;
+        display: block;
       }
 
       .bio-item {
@@ -81,12 +160,58 @@
 </head>
 <body>
   <div class="bio-container">
+    <!-- 📸 Add your photo in the same folder -->
+    <img src="profile.jpg" alt="Rashmi C" class="bio-photo">
+
     <h2>Bio-data</h2>
+
     <div class="bio-item"><strong>Name:</strong> <span>RASHMI C</span></div>
-    <div class="bio-item"><strong>Date of Birth:</strong> <span>20 April 2005</span></div>
+    <div class="bio-item"><strong>Date of Birth:</strong> <span>20 June 2005</span></div>
+    <div class="bio-item"><strong>Gender:</strong> <span>Female</span></div>
     <div class="bio-item"><strong>Nationality:</strong> <span>Indian</span></div>
-    <div class="bio-item"><strong>Languages:</strong> <span>English, Kannada, Hindi, Malayalam</span></div>
-    <div class="bio-item"><strong>Hobbies:</strong> <span>Swimming</span></div>
+    <div class="bio-item"><strong>Address:</strong> <span>Mangalore, Karnataka, India</span></div>
+    <div class="bio-item"><strong>Email:</strong> <span>rashmic1800@gmail.com</span></div>
+    <div class="bio-item"><strong>Phone:</strong> <span>+91 98765 43210</span></div>
+    <div class="bio-item"><strong>Languages Known:</strong> <span>English, Kannada, Hindi, Malayalam</span></div>
+    <div class="bio-item"><strong>Skills:</strong> <span>Web Development, Java, Python.</span></div>
+    <div class="bio-item"><strong>Hobbies:</strong> <span>Crocheting, Swimming</span></div>
+
+    <h3>🎓 Educational Qualification</h3>
+    <table class="edu-table">
+      <tr>
+        <th>Course / Degree</th>
+        <th>Institution / University</th>
+        <th>Year of Passing</th>
+        <th>Percentage / CGPA</th>
+      </tr>
+      <tr>
+        <td>B.Tech in Computer Science</td>
+        <td>A J Institute of Engineering and Technology</td>
+        <td>2027</td>
+        <td>7.8 CGPA</td>
+      </tr>
+      <tr>
+        <td>PUC (Science Stream)</td>
+        <td>St. Aloysius PU College</td>
+        <td>2023</td>
+        <td>90%</td>
+      </tr>
+      <tr>
+        <td>SSLC</td>
+        <td>St. Agnes School</td>
+        <td>2021</td>
+        <td>93%</td>
+      </tr>
+    </table>
+
+    <h3>🏆 Certifications</h3>
+    <ul class="achievement-list">
+      <li>Certified in JavaScript Programming – Infosys Springboard (2024)</li>
+      <li>Completed Python for Everybody – Coursera (2023)</li>
+      <li>Certified Web Developer – Great Learning Academy (2024)</li>
+    </ul>
+
+    <a href="index.html" class="back-btn">← Back to Home</a>
   </div>
 </body>
 </html>
